<resources>
    <string name="app_name">Calendar2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="ng_y_b_t_u_tu_n">Ngày bắt đầu tuần:</string>
    <string name="setting">Setting</string>
    <string name="monday">monday</string>
</resources>