<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tue"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/wed"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/thur"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/fri"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sat"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sun"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mon"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

</LinearLayout>